--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - redis
   celery:
     build: .
-    command: celery worker --app=core --loglevel=info
+    command: celery -A config worker -l INFO
     volumes:
       - .:/usr/src/app
     depends_on:
@@ -38,4 +38,3 @@ services:
     image: "redis:alpine"
 volumes:
   pgdata:
-    
